<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.dqsoftwaresolutions.feedMyRead.CreateTagsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/create_tags"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.Toolbar>
            <LinearLayout
                android:background="@color/footer_of_tags_header"
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.dqsoftwaresolutions.feedMyRead.TagsCompletionView
                    android:ellipsize="start"
                    android:hint="@string/write_your_tag_here"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/upperTab_bar_text"
                    android:layout_margin="10dp"
                    android:background="@color/tag_view_edit_text"
                    android:id="@+id/searchView"
                    android:layout_width="fill_parent"
                    android:textColor="@color/upperTab_bar_text"
                    android:minHeight="40dp"
                    android:padding="10dp"

                    android:layout_height="wrap_content"/>
                <Button
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/save_tag_button"
                    android:id="@+id/button_save_tags"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_tag_save"/>

            </LinearLayout>
            <TextView
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/deep_green"
                android:background="@color/tag_view_edit_text"

                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/my_tags"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/create_tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appToolbar">
            <include  layout="@layout/content_create_tags"/>

        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
