<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/site_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:orientation="horizontal">

    <com.daimajia.swipe.SwipeLayout

        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <!-- Bottom View Start-->
        <LinearLayout
            android:padding="35dp"

            android:layout_centerHorizontal="true"
            android:id="@+id/bottom_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#bababa"
            android:orientation="horizontal">
            <!--What you want to show-->
            <ImageView
                android:contentDescription="@string/empty_favorite_star_image"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:src="@drawable/grey_star"
                android:id="@+id/favorite_empty_star"
                android:layout_marginTop="@dimen/list_row_swipe_items"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:contentDescription="@string/tags_image"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/list_row_swipe_items"
                android:src="@drawable/grey_tag"
                android:id="@+id/tag_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:contentDescription="@string/share_image"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/list_row_swipe_items"
                android:src="@drawable/grey_share"
                android:id="@+id/share_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:contentDescription="@string/trash_image"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/list_row_swipe_items"
                android:src="@drawable/grey_trash"
                android:id="@+id/trash_icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <!-- Bottom View End-->

        <!-- Surface View Start -->
        <LinearLayout
            android:background="@color/main_background_light_grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--What you want to show in SurfaceView-->


            <ImageView
                android:contentDescription="@string/site_image"

                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/site_image"
                android:layout_width="70dp"
                android:layout_height="70dp"/>

            <LinearLayout
                android:id="@+id/context_linear_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView

                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/site_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="90"
                    android:text=""
                    android:lines="2"
                    android:textColor="#040404"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/site_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#3d4144"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                <LinearLayout
                    android:id="@+id/tags_linear_layout_container"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                </LinearLayout>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                    <TextView
                        android:textColor="#F8F4E3"
                        android:layout_marginRight="3dp"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/tags_gradient"
                        android:layout_gravity="center"
                        android:text=""
                        android:id="@+id/tag_over_flowCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:contentDescription="@string/favorite_image"
                        android:layout_gravity="start"
                        android:id="@+id/favorite_star"
                        android:visibility="invisible"
                        android:src="@drawable/favorite"
                        android:layout_width="25dp"
                        android:layout_height="25dp" />
               </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <!-- Surface View End -->
    </com.daimajia.swipe.SwipeLayout>

</RelativeLayout>
    <!--android:listSelector="@drawable/list_selector"-->