<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#adcedf"
    android:orientation="horizontal"
    tools:context="com.dqsoftwaresolutions.feedMyRead.LoginRegisterActivity"
    tools:ignore="Overdraw">

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/book_logo_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/logo_books_image"
                    android:layout_marginTop="0dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo_books"/>
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <View
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginTop="1dp"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.99"
                        android:background="@color/md_white_1000"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.0"
                        android:text="@string/FeedMyReadNoSpace"
                        android:textColor="@color/md_white_1000"
                        android:textSize="30sp"
                        android:textStyle="bold"/>
                    <View

                        android:layout_marginTop="1dp"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center|start"
                        android:layout_weight="0.99"
                        android:background="@color/md_white_1000"/>


            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="20dp">
                    <EditText
                        android:textColor="@color/md_black_1000"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/login_edit_text"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="50dp"
                        android:paddingStart="50dp"
                        android:paddingRight="50dp"
                        android:textStyle="bold">
                    </EditText>
                    <ImageView
                        android:contentDescription="@string/prompt_email"
                        android:id="@+id/user_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="7dp"
                        android:src="@drawable/circleface"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <EditText
                        android:textColor="@color/md_black_1000"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/login_edit_text"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="50dp"
                        android:paddingRight="50dp"
                        android:paddingLeft="50dp">
                    </EditText>
                    <ImageView
                        android:contentDescription="@string/prompt_password"
                        android:id="@+id/password_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/key"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/rss_buttons"
                        android:onClick="attemptLoginRegister"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/md_white_1000"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textStyle="bold" tools:ignore="ButtonStyle"/>
                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/pause_button"
                        android:onClick="attemptLoginRegister"
                        android:text="@string/action_register"
                        android:textColor="@color/deep_green"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textStyle="bold" tools:ignore="ButtonStyle"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/forgot_my_password"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
