<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:id="@+id/article_rss_row"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:textColor="@color/md_black_1000"
        android:padding="12dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text=""
        android:id="@+id/article_rss_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:maxLines="3"
            android:paddingTop="301dp"
            android:textColor="@color/md_black_1000"
            android:textSize="14sp"
            android:padding="12dp"
            android:text=""
            android:id="@+id/article_rss_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap"/>
        <Button
            android:layout_below="@id/article_rss_source"
            android:textColor="@color/md_white_1000"
            android:background="@drawable/rss_buttons"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="28dp"
            android:layout_gravity="bottom|start"
            android:text="@string/save_rss_article"
            android:id="@+id/save_rss_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_below="@id/article_rss_source"
            android:layout_toRightOf="@+id/save_rss_article"
            android:layout_toEndOf="@+id/save_rss_article"
            android:textColor="@color/md_white_1000"
            android:background="@drawable/rss_buttons"

            android:layout_marginTop="28dp"
            android:layout_gravity="bottom|start"
            android:text="@string/share_rss_article"
            android:id="@+id/share_rss_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <ImageView
            android:contentDescription="@string/article_image"
            android:layout_gravity="bottom|end"
            android:src="@color/action_bar"
            android:id="@+id/article_rss_image"
            android:layout_width="150dp"
            android:layout_height="100dp"

            android:layout_marginRight="5dp"

            android:layout_marginTop="15dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7dp"/>
    </RelativeLayout>
    <TextView
        android:visibility="invisible"
        android:id="@+id/article_rss_url"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>


</LinearLayout>

<!--https://newsapi.org/#documentation-->